# Hungarian-algorithm

./: README.md
Code/: main.py  main.spec  sqll.py  ss.db  tables.py  test.py  test2.py
EXE/: ss.db
exe/: ss.db
src/: main.py  pyproject.toml  qt.conf  sqll.py  ss.db  tables.py
