[tool.poetry]
name = "Hungarian algorithm"
version = "0.1.0"
description = ""
authors = ["т"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
munkres = "^1.1.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
